# rubbish

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  changelog.txt  index.html  jsonTree.css  jsonTree.js  main.js  package.json  preload.js  renderer.js  style.css
src/: lib.rs  main.rs  tui.rs  tui_app.rs
