[package]
name = "rubbish"
version = "0.1.0"
edition = "2021"
default-run = "tui"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
# ULID for compact timestamp-based ids used in dump filenames
ulid = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
atty = "0.2"
hyper = { version = "1", features = ["server"] }
tui = "0.19"
crossterm = "0.26"
signal-hook = "0.3"
libc = "0.2"
notify = "5"
unicode-width = "0.1"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"

[[bin]]
name = "rubbish"
path = "src/main.rs"
